tests/error_corpus/validation_errors/E387_replacement_on_fragment.cha
@UTF8
@Begin
@Languages:	eng
@Participants:	CHI Child
@ID:	eng|corpus|CHI|||||Child|||
*CHI:	&+fri [: friend] .
@End
