tests/error_corpus/parse_errors/E364_terminator_in_event_label_question.cha
@UTF8
@Begin
@Languages:	eng
@Participants:	CHI Target_Child
@ID:	eng|corpus|CHI|||||Target_Child|||
*CHI:	&=laughs? why?
@End
